[package]
name = "amaunet"
authors = ["davirain.yin@gmail.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
subxt = { git = "https://github.com/paritytech/subxt.git", branch = "master"}
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
hex-literal = "0.3.1"

# substrate
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }


[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"
